--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ _practice/x.js
 _practice/x.html
 _practice/x.css
 node
+lesson21_sticker-board-v2/jquery-ui-1.12.1/
+lesson21_sticker-board-v2/jquery-ui-1.12.1/images/ui-icons_ffffff_256x240.png
